
version 4.5.3
-- add a plug in architecture. Its now possible to send zulucrypt-cli passphrases through different means, default plugins can retrieve
   passphrases from kde kwallet,gnome keyring,gpg encryped key files and a combination of keyfile and passphrase.
-- show a dialog to warn a user the volume will be opened in read only mode when whey tick the option for the first time.
-- passphrases are sent to the back end in a more secure way using unix local socket.
-- small attempt to hide passphrases from ps command if they are passed through the command line argument.
-- passphrases stored in kde kwallet can be managed from within zulucrypt-gui if their support is enabled at build time.

version 4.6.0
-- add support for opening and closing of truecrypt volumes,this feature need cryptsetup >= 1.6.0

version 4.6.1
-- fix a regression that caused volumes presented by their UUID not to working

version 4.6.2
-- add config option to not build KDE and/or GNOME support even when the system has support for them
-- add support for LVM volumes
-- add support for consulting udev in addition to fstab when deciding if a system is system or not
-- add tcplay as an optional dependency to allow creation of truecrypt volumes
-- fix bug:truecrypt volumes with multiple ciphers did not close properly
-- fix bug:volumes did not close properly if mount point had a space character among others in it
-- feature added:users who are members of "zulumount-exec" group will have their volumes opened with "exec" mount option.
   This will allow them to be able to execute commands from the mount point.The default and recommended option is not mount with "noexec" option.
-- feature added:A "-M" option is added that will create a publicly accessible "mirror" of a mount point in "/run/share" from the private 
   original one created in "/run/media/$USER.This option is there to allow a user to mount a volume and have it accessible from other users of the system.