@@ -63,7 +63,6 @@ public:
 	static void help( QString app ) ;
 	static QString shareMountPointToolTip( void ) ;
 	static QString shareMountPointToolTip( QString ) ;
-
 };
 
 #endif // MISCFUNCTIONS_H
